@@ -1,4 +1,5 @@
 2.2.5
+ * Fix exceptions when enabling gossip on nodes that haven't joined the ring (CASSANDRA-12253)
  * Calculate last compacted key on startup (CASSANDRA-6216)
  * Make randompartitioner work with new vnode allocation (CASSANDRA-12647)
  * Add algorithmic token allocation (CASSANDRA-7032)
